updated index.html for github page